# sort_data_away

./: Flow_Sort_Data_Away  LICENSE  README.md  exec_compose.sh  requirements.txt
config/: config.yaml
docker/: Dockerfile  docker-compose.yml
docker/megasync/: Dockerfile
exif_meta_tool/: CMakeLists.txt
exif_meta_tool/cpp_exiftool/example/: example1  example2  example3  example4  example5
exif_meta_tool/include/: Table.h
exif_meta_tool/src/: Table.cpp  main.cpp
src/: clean_folder_structure.py  sort_data.py
src/old/: crontab_sort  sort_pics.sh
